--- a/DisasterRecovery/Views/Shared/_LoginLayout.cshtml
+++ b/DisasterRecovery/Views/Shared/_LoginLayout.cshtml
@@ -5,7 +5,11 @@
 
     <title>Disaster Recovery</title>
 </head>
-<body>
+
+<body background="#0b1c2d">
+    <div class="logologin">
+        <img src="~/Content/img/4teamlogo.png" width="300" />
+    </div>
     <section class="d-flex">
         <div class="loginContainer row shadow">
             <div class="col-md-12">
