--- a/DisasterRecovery/Content/login.css
+++ b/DisasterRecovery/Content/login.css
@@ -1,1 +1,1 @@
-.loginContainer{width:700px;background-color:white;margin:auto;position:relative;margin-top:150px}.loginContainer .form-horizontal{margin:auto;padding:10px;padding-top:21px;background-color:white}
+.loginContainer{width:400px;background-color:white;margin:auto;position:relative;margin-top:0px}.loginContainer .form-horizontal{margin:auto;padding:10px;padding-top:21px;background-color:white}.logologin{margin:10% auto 20px;width:100%;text-align:center}body{background-color:#0b1c2d !important}.shadow{box-shadow:0px 0px 100px 10px rgba(0,128,255,0.3) !important}
