--- a/DisasterRecovery/Content/login.scss
+++ b/DisasterRecovery/Content/login.scss
@@ -1,11 +1,12 @@
 @import 'variables.scss';
  
-.loginContainer{
-    width: 700px;
-    background-color: white;
-    margin: auto;
-    position: relative;
-    margin-top: 150px;
+.loginContainer {
+  width: 400px;
+  background-color: white;
+  margin: auto;
+  position: relative;
+  margin-top: 0px;
+
 
     .form-horizontal {
         margin: auto;
@@ -15,5 +16,18 @@
       }
 }
 
+.logologin {
+  margin: 10% auto 20px;
+  width: 100%;
+  text-align: center;
+}
+
+body {
+  background-color: #0b1c2d !important;
+}
+
+.shadow {
+  box-shadow: 0px 0px 100px 10px rgba(0,128,255,0.30) !important;
+}
 
 
