--- a/DisasterRecovery/Views/Login/Index.cshtml
+++ b/DisasterRecovery/Views/Login/Index.cshtml
@@ -23,16 +23,16 @@
     @Html.AntiForgeryToken()
     <div class="col-md-12">
         <div class="form-group">
-            <label for="Email">User Name:</label>
+            <label for="user">User Name:</label>
             @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger", @required = "required" })
         </div>
     </div>
     <div class="col-md-12">
         <div class="form-group">
             <label for="Password">Password</label>
             @Html.EditorFor(model => model.UserPassWord, new { htmlAttributes = new { @class = "form-control", @type = "password" }})
-            @Html.ValidationMessageFor(model => model.UserPassWord, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.UserPassWord, "", new { @class = "text-danger", @required = "required" })
         </div>
     </div>@*
     <div class="col-md-offset-2 col-md-10 hideRow">
