--- a/DisasterRecovery/Views/JobLists/Details.cshtml
+++ b/DisasterRecovery/Views/JobLists/Details.cshtml
@@ -47,7 +47,14 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LaborStatus)
+            @if (@Html.DisplayFor(model => model.LaborStatus).ToString() == "1")
+            {
+                <p>Inactive</p>
+            }
+            else
+            {
+                <p>Active</p>
+            }
         </dd>
 
         <dt>
