--- a/DisasterRecovery/Views/JobLists/Create.cshtml
+++ b/DisasterRecovery/Views/JobLists/Create.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h2>Create</h2>
-//something
 
 @using (Html.BeginForm()) 
 {
@@ -56,11 +55,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LaborStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.LaborStatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LaborStatus, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LaborStatus, "", new { @class = "text-danger" })
-            </div>
+            </div>*@
         </div>
 
         <div class="form-group">
