--- a/DisasterRecovery/Views/JobLists/Index.cshtml
+++ b/DisasterRecovery/Views/JobLists/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<DisasterRecovery.Models.JobList>
+﻿@model PagedList.IPagedList<DisasterRecovery.Models.JobList>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Index";
@@ -9,55 +11,80 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<br />
+@using (Html.BeginForm("Index", "JobLists", FormMethod.Get))
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+<br />
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.JobName)
+            @*@Html.DisplayNameFor(model => model.JobName)*@
+            @Html.ActionLink("JobName", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.JobDescription)
+            @*@Html.DisplayNameFor(model => model.JobDescription)*@
+            @Html.ActionLink("JobDescription", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Rate)
+            Rate
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MaxHour)
+            MaxHour
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LaborStatus)
+            LaborStatus
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SubContractor.SubContractorName)
+            SubContractorName
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobDescription)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaxHour)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LaborStatus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SubContractor.SubContractorName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IdJobList }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IdJobList }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IdJobList })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobDescription)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MaxHour)
+            </td>
+            <td>
+                @if (item.LaborStatus == 1)
+                {
+                    <p>Inactive</p>
+                }
+                else
+                {
+                    <p>Active</p>
+                }
+                @*@Html.DisplayFor(modelItem => item.LaborStatus)*@
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SubContractor.SubContractorName)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IdJobList }) |
+                @Html.ActionLink("Details", "Details", new { id = item.IdJobList }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IdJobList })
+            </td>
+        </tr>
+    }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
