--- a/DisasterRecovery/Views/SubContractors/Create.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Create.cshtml
@@ -48,11 +48,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SubContractorStatus, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SubContractorStatus, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SubContractorStatus, "", new { @class = "text-danger" })
-            </div>
+
+            @*@Html.LabelFor(model => model.SubContractorStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SubContractorStatus, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SubContractorStatus, "", new { @class = "text-danger" })
+        </div>*@
+
         </div>
 
         <div class="form-group">
