--- a/DisasterRecovery/Views/SubContractors/Details.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Details.cshtml
@@ -47,7 +47,16 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SubContractorStatus)
+
+            @if (@Html.DisplayFor(model => model.SubContractorStatus).ToString() == "1")
+            {
+                <p>Inactive</p>
+            }
+            else
+            {
+                <p>Active</p>
+            }
+
         </dd>
 
     </dl>
