--- a/DisasterRecovery/Views/SubContractors/Index.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<DisasterRecovery.Models.SubContractor>
+﻿@model PagedList.IPagedList<DisasterRecovery.Models.SubContractor>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+
 
 @{
     ViewBag.Title = "Index";
@@ -9,49 +12,77 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<br />
+@using (Html.BeginForm("Index", "SubContractors", FormMethod.Get))
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+<br />
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.SubContractorName)
+            @*@Html.DisplayNameFor(model => model.SubContractorName)*@
+            @Html.ActionLink("SubContractorName", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContractorAddress)
+            @*@Html.DisplayNameFor(model => model.ContractorAddress)*@
+            @Html.ActionLink("ContractorAddress", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Phone)
+            Phone
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SubContractorStatus)
+            SubContractorStatus
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SubContractorName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractorAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SubContractorStatus)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IdSubContractor }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IdSubContractor }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IdSubContractor })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.SubContractorName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractorAddress)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+
+                @if (item.SubContractorStatus == 1)
+                {
+                    <p>Inactive</p>
+                }
+                else
+                {
+                    <p>Active</p>
+                }
+
+                @*@Html.DisplayFor(modelItem => item.SubContractorStatus)*@
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IdSubContractor }) |
+                @Html.ActionLink("Details", "Details", new { id = item.IdSubContractor }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IdSubContractor })
+            </td>
+        </tr>
+    }
 
 </table>
+
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
