--- a/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
@@ -2,15 +2,22 @@
 
 @{
     ViewBag.Title = "Index";
+    var totalHours = ViewBag.TotalHours;
+    var totalAmount = ViewBag.TotalAmount;
 }
 
-<h2>Index</h2>
+
+<center>
+    <h2>Labor Entry</h2>
+</center>
+
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Labor", "Create")
 </p>
 <table class="table">
     <tr>
+        <th></th>
         <th>
             @Html.DisplayNameFor(model => model.Hours)
         </th>
@@ -18,16 +25,15 @@
             @Html.DisplayNameFor(model => model.Amount)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.JobList.JobName)
+            Job
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TimeCard.TimeStatus)
-        </th>
+        
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td> </td>
         <td>
             @Html.DisplayFor(modelItem => item.Hours)
         </td>
@@ -37,9 +43,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.JobList.JobName)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TimeCard.TimeStatus)
-        </td>
+       
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
@@ -47,5 +51,16 @@
         </td>
     </tr>
 }
-
+<tr>
+    <th> Totals</th>
+    <td> @totalHours</td> 
+    <td> @totalAmount</td>
+</tr>
+   
 </table>
+
+<div>
+    @Html.ActionLink("Submit Entry", "Submit")
+    @Html.ActionLink("Cancel", "Cancel")
+
+</div>
