--- a/DisasterRecovery/Views/SiteLocations/Details.cshtml
+++ b/DisasterRecovery/Views/SiteLocations/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+    <h2>Details of Site Location</h2>
 
 <div>
-    <h4>SiteLocation</h4>
+    <h4></h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
