--- a/DisasterRecovery/Views/Shared/_Layout.cshtml
+++ b/DisasterRecovery/Views/Shared/_Layout.cshtml
@@ -13,11 +13,12 @@
         <div id="sidebar-wrapper">
             <div class="sidebar-heading"><img id="logo" style="width: 200px;" src="~/Content/img/4teamlogo.png"></div>
             <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action menu-active"><i class="fa fa-home"></i>Home</a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-table" aria-hidden="true"></i>Sub-contractors</a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>User Management</a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>TimeCards</a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>Site Locations</a>
+                <a href="~/TimeCards/IndexAdm" class="list-group-item list-group-item-action menu-active"><i class="fa fa-home"></i>Home</a>
+                <a href="~/Subcontractors/Index" class="list-group-item list-group-item-action"><i class="fa fa-table" aria-hidden="true"></i>Sub-contractors</a>
+                <a href="~/JobLists" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>Jobs List</a>
+                <a href="~/Users" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>User Management</a>
+                <a href="~/TimeCards/IndexAdm" class="list-group-item list-group-item-action"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>TimeCards</a>
+                <a href="~/SiteLocations" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>Site Locations</a>
             </div>
         </div>
 
@@ -39,7 +40,8 @@
                                 @{if (@Session["LogedUserRole"] != null)
                                     {
                                        <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
-                                    }
+                                       <div class="dropdown-divider"></div>
+                                       }
                                 }
                                 <div class="dropdown-divider"></div>
                                 @{if (@Session["LogedUserName"] == null)
@@ -82,6 +84,9 @@
     <script>
         $(document).ready(function () {
             $('#userTable').DataTable();
+            $('#JoblistTable').DataTable();
+            $('#SiteLocationTable').DataTable();
+            $('#SubContractorTable').DataTable();
         });
     </script>
 </body>
