--- a/DisasterRecovery/Views/Users/Edit.cshtml
+++ b/DisasterRecovery/Views/Users/Edit.cshtml
@@ -104,7 +104,11 @@
             }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @if (Session["LogedUserRole"] == "Admin")
+    {
+        @Html.ActionLink("Back to List", "Index")
+
+    }
 </div>
 
 @section Scripts {
