--- a/DisasterRecovery/Views/TimeCardDetails/Create.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Create.cshtml
@@ -2,6 +2,10 @@
 
 @{
     ViewBag.Title = "Create";
+     if (Session["LogedUserRole"] == "Contractor")
+    {
+        Layout = "~/Views/Shared/_LayoutContractor.cshtml";
+    }
 }
 
 <h2>Create</h2>
@@ -15,7 +19,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.IdJobList, "IdJobList", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.IdJobList, "Job", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("IdJobList", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.IdJobList, "", new { @class = "text-danger" })
