--- a/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Index";
     var totalHours = ViewBag.TotalHours;
     var totalAmount = ViewBag.TotalAmount;
+    
+     if (Session["LogedUserRole"] == "Contractor")
+    {
+        Layout = "~/Views/Shared/_LayoutContractor.cshtml";
+    }
 }
 
 
@@ -45,9 +50,8 @@
         </td>
        
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id = item.IdTimeCardDetails}) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.IdTimeCardDetails})
         </td>
     </tr>
 }
