--- a/DisasterRecovery/Views/TimeCards/Edit.cshtml
+++ b/DisasterRecovery/Views/TimeCards/Edit.cshtml
@@ -2,13 +2,17 @@
 
 @{
     ViewBag.Title = "Edit";
+     if (Session["LogedUserRole"] == "Contractor")
+    {
+        Layout = "~/Views/Shared/_LayoutContractor.cshtml";
+    }
+
 }
 
     <center>
         <h2>TimeCard Submission</h2>
 
     </center>
-
 
 @using (Html.BeginForm())
 {
@@ -20,44 +24,36 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.IdTimeCard)
 
-        <table class="table">
-            <tr>
-                <th>
-                   Site Location:
-                   @Html.DropDownList("SiteID")
-                   @Html.ValidationMessageFor(model => model.SiteID, "", new { @class = "text-danger" })
-                </th>
-                <th>
-                    Contractor:
-                    @Html.DropDownList("IdSubContractor")
-                    @Html.ValidationMessageFor(model => model.IdSubContractor, "", new { @class = "text-danger" })
-
-                </th>
-
-                <th>
-                    Submitted by:
-                    @Html.DropDownList("IdUser")
-                    @Html.ValidationMessageFor(model => model.IdUser, "", new { @class = "text-danger" })
-                </th>
-                
-            </tr>
-        </table>
-
-      
-
-   
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.SiteID,"Location", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("SiteID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.SiteID, "", new { @class = "text-danger" })
         </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.IdSubContractor, "Contractor", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("IdSubContractor", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IdSubContractor, "", new { @class = "text-danger" })
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+            </div>
+        </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        
+    </div>
+        }
+
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
